[package]
name = "rstrtr"
version = "0.1.0"
authors = ["Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Stream Multiplexor for tokio with a tcp like interface"
repository = "https://github.com/GothAck/rstrtr"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
clap = "3.0.0-beta.5"
notify = "4.0.17"
